Fixing the overlay perf issue and modal's jumping to top, which was caused by the focus event.

--- a/framework/components/overlay/_overlay.scss
+++ b/framework/components/overlay/_overlay.scss
@@ -10,7 +10,8 @@ $overlayTransition: .25s;
 	position: absolute;
 	transition: $overlayTransition;
 	visibility: hidden;
-	z-index: 999;
+	z-index: 99;
+	@include translateZ(0);
 
 	&.active {
 	opacity: 1;
@@ -39,7 +40,6 @@ $overlayTransition: .25s;
 	transition: $overlayTransition 0;
 	width: 80%;
 	visibility: hidden;
-	z-index: 9999;
 
 	&.active {
 		top: 0;
@@ -67,12 +67,13 @@ $overlayTransition: .25s;
 	top: 0;
 	transition: $overlayTransition $overlayTransition;
 	visibility: hidden;
-	z-index: 9998;
+	z-index: 98;
+	@include translateZ(0);
 
 	&.active {
-	opacity: 1;
-	transition: $overlayTransition 0;
-	visibility: visible;
+		opacity: 1;
+		transition: $overlayTransition 0;
+		visibility: visible;
 	}
 }
 
